RESOLVED FIXED85218
[chromium] CCProxy's shouldn't try to draw if there is no layer renderer
https://bugs.webkit.org/show_bug.cgi?id=85218
Summary [chromium] CCProxy's shouldn't try to draw if there is no layer renderer
vollick
Reported 2012-04-30 11:26:25 PDT
Currently we try and draw, which appears to cause problems when we calculateDrawEtc and don't have a valid set of layerRendererProperties.
Attachments
Patch (1.57 KB, patch)
2012-04-30 11:30 PDT, vollick
no flags
Patch (1.57 KB, patch)
2012-04-30 11:36 PDT, vollick
no flags
Patch (1.49 KB, patch)
2012-04-30 11:46 PDT, vollick
no flags
Patch (1.54 KB, patch)
2012-05-01 07:33 PDT, vollick
no flags
Patch (2.14 KB, patch)
2012-05-03 12:36 PDT, vollick
no flags
vollick
Comment 1 2012-04-30 11:30:38 PDT
WebKit Review Bot
Comment 2 2012-04-30 11:32:26 PDT
Attachment 139488 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
vollick
Comment 3 2012-04-30 11:36:12 PDT
WebKit Review Bot
Comment 4 2012-04-30 11:38:25 PDT
Attachment 139493 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
vollick
Comment 5 2012-04-30 11:46:41 PDT
Created attachment 139496 [details] Patch Removed assert -- should be valid to try and draw without a renderer. Should just fail.
Nat Duca
Comment 6 2012-05-01 00:16:40 PDT
Comment on attachment 139496 [details] Patch What causes this to happen?
vollick
Comment 7 2012-05-01 07:33:17 PDT
Created attachment 139624 [details] Patch (In reply to comment #6) > (From update of attachment 139496 [details]) > What causes this to happen? I'm not sure. Looking at http://code.google.com/p/chromium/issues/detail?id=125482, it appears the only culprit could be a null renderer. I would also like to know how we get in this state, but in the short term, it would be nice to avoid the crash.
Adrienne Walker
Comment 8 2012-05-01 09:12:10 PDT
Comment on attachment 139624 [details] Patch I'm still really confused how this could happen, other than maybe prior to initializeLayerRenderer. I think canDraw() should also return false in this case so that we don't draw unless forced to.
vollick
Comment 9 2012-05-03 12:36:18 PDT
Created attachment 140068 [details] Patch (In reply to comment #8) > (From update of attachment 139624 [details]) > I'm still really confused how this could happen, other than maybe prior to initializeLayerRenderer. > > I think canDraw() should also return false in this case so that we don't draw unless forced to. Good idea. Done.
Adrienne Walker
Comment 10 2012-05-04 12:19:16 PDT
Comment on attachment 140068 [details] Patch R=me.
WebKit Review Bot
Comment 11 2012-05-04 13:05:30 PDT
Comment on attachment 140068 [details] Patch Clearing flags on attachment: 140068 Committed r116152: <http://trac.webkit.org/changeset/116152>
WebKit Review Bot
Comment 12 2012-05-04 13:05:36 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.