[chromium] CCProxy's shouldn't try to draw if there is no layer renderer https://bugs.webkit.org/show_bug.cgi?id=85218

Patch by Ian Vollick <vollick@chromium.org> on 2012-05-04
Reviewed by Adrienne Walker.

* platform/graphics/chromium/cc/CCThreadProxy.cpp:
(WebCore::CCThreadProxy::scheduledActionDrawAndSwapInternal):

Canonical link: https://commits.webkit.org/103221@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116152 268f45cc-cd09-0410-ab3c-d52691b4dbfc